add test package